--- a/Marvel.html
+++ b/Marvel.html
@@ -32,34 +32,8 @@
 	</div>
 
 	<div id="note">
-		<h2>Learn more about spider-man</h2>
+		<h2><a href="clark.html">Learn more about spider-man</a></h2>
 		<p id="Learn">
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			Spider-Man is a superhero appearing in American comic books published by Marvel Comics. Spider-Man is the alias of Peter Parker, an orphan raised by his Aunt May and Uncle Ben in New York City after his parents Richard and Mary Parker died in a plane crash. Lee and Ditko had the character deal with the struggles of adolescence and financial issues and gave him many supporting characters, such as Flash Thompson, J. Jonah Jameson and Harry Osborn, romantic interests Gwen Stacy, Mary Jane Watson and the Black Cat, and foes such as Doctor Octopus, the Green Goblin and Venom. In his origin story, he gets spider-related abilities from a bite from a radioactive spider; these include clinging to surfaces, superhuman strength and agility, and detecting danger with his "spider-sense." He also builds wrist-mounted "web-shooter" devices that shoot artificial spider webs of his own design. There are three different actors that played spider-man, such as Tobey Maguire, Andrew Garfield and Tom Holland. He follows the motto of "With great power, comes great responsibility".
 		</p>
 	</div>
-
-	<div id="cards">
-		<div>
-			<p>Thor dark world</p>
-			<img id="Dark"class="Thor dark world" src="Thor image.jpeg">
-		</div>
-		<div>
-			<p>Iron spider</p>
-			<img class="Iron spider" src="images.jpg">
-		</div>
-		<div>
-			<p>Far from home</p>
-			<img class="Far from home" src="Far from home.jpg">
-		</div>
-		<div>
-			<p>No way home</p>
-			<img class="No way home" src="No way home.jpg">
-		</div>
-	</div>
-</body>
-</html>
